--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <div class="pimg1">
     <div class="ptext">
      <span class="border">
-      Cobrettie Garner
+       Cobrettie Garner, 2018 
     </span>
     </div>
   </div>
